# CS214-SPRING2019

./: .gitmodules  Asst0.tar  LICENSE  README.md
Asst0/: a.out  pointersorter  pointersorter.c  readme.txt  testcases.txt
Asst1/: Makefile  memgrind  memgrind.c  mymalloc.c  mymalloc.h  testplan.txt
Asst2/: CMakeLists.txt  Makefile  createTempData.py  ds.c  ds.h  fileCompressor.c  huffman.c  huffman.cpp  huffman.h  interface.h  test.codebook  testplan.txt
Asst2.5/: main.c
Asst2.5_dzz/: CMakeLists.txt  Makefile  my_ps.c
Asst3/: CMakeLists.txt  IMPORTANT-README  Makefile  libtar.patch  readme.docx  testcases.txt  testplan.txt  tm_test_payload
Asst3/client/: client.c  client.h  clientutil.c  clientutil.h  network.c  network.h
Asst3/common/: libtar.h  netutil.c  netutil.h  protocol.c  protocol.h  util.c  util.h
Asst3/playground/: main.c
Asst3/server/: ds.c  ds.h  logic.c  logic.h  main.c  network.c  network.h  serverutil.c  serverutil.h
pa0/: pointersorter.c
